<resources>
    <string name="app_name">Companion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_notes">Notes</string>
    <string name="menu_cactus">Cactus</string>
    <string name="menu_anniversaries">Anniversaries</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!--Note preferences contain sorting prefs-->
    <string name="note_preferences">NotePrefs</string>

    <!--Anniversary preferences contain sorting prefs-->
    <string name="anniversary_preferences">AnniversaryPrefs</string>

    <!--Cactus preferences contain sorting prefs and date together-->
    <string name="cactus_preferences">DatePrefs</string>
    <string name="cactus_preferences_key_together">together</string> <!-- date together as yyyy-MM-dd-->

    <!--Password preferences contain password-->
    <string name="pass_preferences">PassPrefs</string>
    <string name="pass_preferences_key_pass">p</string> <!-- Password hash with Argon2 stored under this key-->

    <!--Used in NotifyAddDialog -->
    <string-array
        name="message_add_dialog_options">
        <item>On the anniversary itself</item>
        <item>Some time before…</item>
        <item>Every day until anniversary, some time before…</item>
    </string-array>

    <!--Our custom Actions for PlatformReceiver-->
    <string name="action_check_notifications">com.python.companion.action.CHECK_NOTIFICATIONS</string>
</resources>
