<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_note">

    <fragment
        android:id="@+id/nav_note"
        android:name="com.python.companion.ui.notes.note.NoteFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/nav_cactus"
        android:name="com.python.companion.ui.cactus.CactusFragment"
        android:label="@string/menu_cactus"
        tools:layout="@layout/fragment_cactus" />

    <fragment
        android:id="@+id/nav_jubilea"
        android:name="com.python.companion.ui.jubileum.JubileumFragment"
        android:label="@string/menu_jubilea"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.python.companion.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.python.companion.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.python.companion.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>